--- a/index.html
+++ b/index.html
@@ -11,18 +11,17 @@
 
 <body>
     <header class="container text-center">
-        <img src="img/avatar-perfil.png" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150" srcset="">
-        <p class="lead">Eu sou Fernanda_</p>
-        <h1>Eu ensino Programação</h1>
-        <p>Sou Engenheira de Computação e Pedagoga. Ensino pensamento computacional para estudantes do Ensino
-            Fundamental e Médio. Ensino sobre pensamento computacional usando HTML, CSS e JavaScript. Veja os projetos
-            que já desenvolvi!</p>
+        <img src="img/avatar-perfil.png" alt="avatar da Milena" class="rounded-circle" width="150" height="150" srcset="">
+        <p class="lead">Eu sou Milena_</p>
+        <h1>Eu sou atriz</h1>
+        <p>Atuo na área do teatro e cinema. Busco sempre trazer um momento de conforto para as pessoas e dar o meu melhor.
+             </p>
         <p>Minhas habilidades</p>
         <div>
-            <p class="badge bg-secondary">HTML</p>
-            <p class="badge bg-secondary">CSS</p>
-            <p class="badge bg-secondary">JavaScript</p>
-            <p class="badge bg-secondary">Scratch</p>
+            <p class="badge bg-secondary">Criatividade</p>
+            <p class="badge bg-secondary">Memorização</p>
+            <p class="badge bg-secondary">Comunicação</p>
+            <p class="badge bg-secondary">Interpretação</p>
         </div>
     </header>
     <main class="container">
